// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ProfileSummaryView correctly 1`] = `
<div
  className="summarize-profile"
>
  <div
    className="summarize-profile-inner"
  >
    <div>
      <div
        className="summarize-profile-table"
      >
        <div>
          <div
            className="summarize-profile-thread"
            colSpan="3"
          >
            Empty
             Thread, 
            default
             process
          </div>
          <div
            className="summarize-profile-header"
          >
            <div
              className="summarize-line-graph"
              title="The line graph represents the number of samples that were in a given category over time. In order to present a high-level summary, the samples are smoothed with a rolling average."
            >
              Rolling Average of Samples
            </div>
            <div
              className="summarize-profile-details"
            >
              <div
                className="summarize-profile-text"
                title="Each sample's call stack is used to place it in an appropriate category."
              >
                Category
              </div>
              <div
                className="summarize-profile-numeric"
                title="The profiler samples the call stack at a fixed rate. Each of these samples is categorized and then summed over the course of the recording."
              >
                Samples
              </div>
              <div
                className="summarize-profile-numeric"
                title="The percentage of time represents the percentage of how many samples of a given category were observed over the entire course of the recording."
              >
                % Time
              </div>
            </div>
          </div>
        </div>
        <div
          className="summarize-profile-row"
        >
          <div
            className="summarize-line-graph"
          >
            <div
              className="filler summarize-line-graph-filler"
              style={
                Object {
                  "height": "30px",
                }
              }
            />
          </div>
          <div
            className="summarize-profile-details"
          >
            <div
              className="summarize-profile-text"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
            <div
              className="summarize-profile-numeric"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
            <div
              className="summarize-profile-numeric"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
          </div>
        </div>
        <div
          className="summarize-profile-row"
        >
          <div
            className="summarize-line-graph"
          >
            <div
              className="filler summarize-line-graph-filler"
              style={
                Object {
                  "height": "30px",
                }
              }
            />
          </div>
          <div
            className="summarize-profile-details"
          >
            <div
              className="summarize-profile-text"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
            <div
              className="summarize-profile-numeric"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
            <div
              className="summarize-profile-numeric"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
          </div>
        </div>
        <div
          className="summarize-profile-row"
        >
          <div
            className="summarize-line-graph"
          >
            <div
              className="filler summarize-line-graph-filler"
              style={
                Object {
                  "height": "30px",
                }
              }
            />
          </div>
          <div
            className="summarize-profile-details"
          >
            <div
              className="summarize-profile-text"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
            <div
              className="summarize-profile-numeric"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
            <div
              className="summarize-profile-numeric"
            >
              <div
                className="filler summarize-profile-filler"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ProfileSummaryView correctly 2`] = `
<div
  className="summarize-profile"
>
  <div
    className="summarize-profile-inner"
  >
    <div>
      <div
        className="summarize-profile-table"
      >
        <div>
          <div
            className="summarize-profile-thread"
            colSpan="3"
          >
            Empty
             Thread, 
            default
             process
          </div>
          <div
            className="summarize-profile-header"
          >
            <div
              className="summarize-line-graph"
              title="The line graph represents the number of samples that were in a given category over time. In order to present a high-level summary, the samples are smoothed with a rolling average."
            >
              Rolling Average of Samples
            </div>
            <div
              className="summarize-profile-details"
            >
              <div
                className="summarize-profile-text"
                title="Each sample's call stack is used to place it in an appropriate category."
              >
                Category
              </div>
              <div
                className="summarize-profile-numeric"
                title="The profiler samples the call stack at a fixed rate. Each of these samples is categorized and then summed over the course of the recording."
              >
                Samples
              </div>
              <div
                className="summarize-profile-numeric"
                title="The percentage of time represents the percentage of how many samples of a given category were observed over the entire course of the recording."
              >
                % Time
              </div>
            </div>
          </div>
        </div>
        <div
          className="summarize-profile-row"
        >
          <div
            className="summarize-line-graph"
          >
            <svg
              height={30}
              style={
                Object {
                  "height": "30px",
                  "width": "400px",
                }
              }
              width={400}
            >
              <defs>
                <linearGradient
                  id="summarize-line-graph-gradient"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="10%"
                    stopColor="#e11800"
                  />
                  <stop
                    offset="60%"
                    stopColor="#56b300"
                  />
                  <stop
                    offset="85%"
                    stopColor="#c8f983"
                  />
                  <stop
                    offset="95%"
                    stopColor="rgba(200, 249, 131, 0)"
                  />
                </linearGradient>
              </defs>
              <path
                d="M-10,0L-10,30M0,1.5L10.256,1.5L82.051,28.5L92.308,28.5L102.564,28.5L112.821,28.5L184.615,1.5L194.872,1.5L205.128,1.5L215.385,1.5L287.179,28.5L297.436,28.5L307.692,28.5L317.949,28.5L389.744,28.5L400,28.5"
                fill="none"
                stroke="url(#summarize-line-graph-gradient)"
                strokeWidth={3}
              />
            </svg>
          </div>
          <div
            className="summarize-profile-details"
          >
            <div
              className="summarize-profile-text"
            >
              wait
            </div>
            <div
              className="summarize-profile-numeric"
            >
              2
            </div>
            <div
              className="summarize-profile-numeric"
            >
              40.0
            </div>
          </div>
        </div>
        <div
          className="summarize-profile-row"
        >
          <div
            className="summarize-line-graph"
          >
            <svg
              height={30}
              style={
                Object {
                  "height": "30px",
                  "width": "400px",
                }
              }
              width={400}
            >
              <defs>
                <linearGradient
                  id="summarize-line-graph-gradient"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="10%"
                    stopColor="#e11800"
                  />
                  <stop
                    offset="60%"
                    stopColor="#56b300"
                  />
                  <stop
                    offset="85%"
                    stopColor="#c8f983"
                  />
                  <stop
                    offset="95%"
                    stopColor="rgba(200, 249, 131, 0)"
                  />
                </linearGradient>
              </defs>
              <path
                d="M-10,0L-10,30M0,28.5L10.256,28.5L82.051,28.5L92.308,28.5L102.564,28.5L112.821,28.5L184.615,28.5L194.872,28.5L205.128,28.5L215.385,28.5L287.179,28.5L297.436,28.5L307.692,28.5L317.949,28.5L389.744,1.5L400,1.5"
                fill="none"
                stroke="url(#summarize-line-graph-gradient)"
                strokeWidth={3}
              />
            </svg>
          </div>
          <div
            className="summarize-profile-details"
          >
            <div
              className="summarize-profile-text"
            >
              dom
            </div>
            <div
              className="summarize-profile-numeric"
            >
              1
            </div>
            <div
              className="summarize-profile-numeric"
            >
              20.0
            </div>
          </div>
        </div>
        <div
          className="summarize-profile-row"
        >
          <div
            className="summarize-line-graph"
          >
            <svg
              height={30}
              style={
                Object {
                  "height": "30px",
                  "width": "400px",
                }
              }
              width={400}
            >
              <defs>
                <linearGradient
                  id="summarize-line-graph-gradient"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="10%"
                    stopColor="#e11800"
                  />
                  <stop
                    offset="60%"
                    stopColor="#56b300"
                  />
                  <stop
                    offset="85%"
                    stopColor="#c8f983"
                  />
                  <stop
                    offset="95%"
                    stopColor="rgba(200, 249, 131, 0)"
                  />
                </linearGradient>
              </defs>
              <path
                d="M-10,0L-10,30M0,28.5L10.256,28.5L82.051,28.5L92.308,28.5L102.564,28.5L112.821,28.5L184.615,28.5L194.872,28.5L205.128,28.5L215.385,28.5L287.179,1.5L297.436,1.5L307.692,1.5L317.949,1.5L389.744,28.5L400,28.5"
                fill="none"
                stroke="url(#summarize-line-graph-gradient)"
                strokeWidth={3}
              />
            </svg>
          </div>
          <div
            className="summarize-profile-details"
          >
            <div
              className="summarize-profile-text"
            >
              network
            </div>
            <div
              className="summarize-profile-numeric"
            >
              1
            </div>
            <div
              className="summarize-profile-numeric"
            >
              20.0
            </div>
          </div>
        </div>
        <div
          className="summarize-profile-row"
        >
          <div
            className="summarize-line-graph"
          >
            <svg
              height={30}
              style={
                Object {
                  "height": "30px",
                  "width": "400px",
                }
              }
              width={400}
            >
              <defs>
                <linearGradient
                  id="summarize-line-graph-gradient"
                  x1="0%"
                  x2="0%"
                  y1="0%"
                  y2="100%"
                >
                  <stop
                    offset="10%"
                    stopColor="#e11800"
                  />
                  <stop
                    offset="60%"
                    stopColor="#56b300"
                  />
                  <stop
                    offset="85%"
                    stopColor="#c8f983"
                  />
                  <stop
                    offset="95%"
                    stopColor="rgba(200, 249, 131, 0)"
                  />
                </linearGradient>
              </defs>
              <path
                d="M-10,0L-10,30M0,28.5L10.256,28.5L82.051,1.5L92.308,1.5L102.564,1.5L112.821,1.5L184.615,28.5L194.872,28.5L205.128,28.5L215.385,28.5L287.179,28.5L297.436,28.5L307.692,28.5L317.949,28.5L389.744,28.5L400,28.5"
                fill="none"
                stroke="url(#summarize-line-graph-gradient)"
                strokeWidth={3}
              />
            </svg>
          </div>
          <div
            className="summarize-profile-details"
          >
            <div
              className="summarize-profile-text"
            >
              script
            </div>
            <div
              className="summarize-profile-numeric"
            >
              1
            </div>
            <div
              className="summarize-profile-numeric"
            >
              20.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
